# es_outfitter

./: .dockerignore  .gitignore  manage.py  pyproject.toml
.github/workflows/: build.yml  ci.yml  deploy.yml
data_api/: admin.py  data.py  models.py  serializers.py  tests.py  urls.py  views.py
data_api/migrations/: 0001_initial.py  0002_auto_20210628_0954.py  0003_auto_20210820_1141.py  0004_outfit_shield_heat.py  0005_auto_20210820_1145.py  0006_outfit_atmosphere_scan.py  0007_outfit_cloak.py  0008_auto_20210822_1328.py  0009_auto_20210822_1508.py  0010_auto_20210822_1620.py  0011_auto_20210822_1653.py  0012_auto_20210825_1314.py  0013_auto_20211018_1020.py  0014_auto_20211116_2042.py  0015_auto_20211129_1150.py  0016_auto_20211129_1519.py  0017_auto_20211206_1158.py  0018_alter_outfit_shots_per_second.py  0019_auto_20211206_1239.py  0020_auto_20211206_1244.py  0021_auto_20220112_1903.py  0022_auto_20220112_1913.py  0023_hull_total_hp.py  0024_alter_hull_thrust.py  0025_alter_outfit_thrust.py  0026_auto_20220116_1153.py  0027_auto_20220116_1200.py  0028_auto_20220116_1202.py  0029_auto_20220117_1908.py  0030_rename_reload_time_outfit_reload.py  0031_auto_20220117_1957.py  0032_auto_20220121_1240.py  0033_rename_missile_capacity_outfit_ammo_capacity.py  0034_auto_20220123_1525.py  (+5 more)
docker/: .env.dev  .env.prod  Dockerfile.dev  Dockerfile.prod  cron.sh  crontab  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.py
es_outfitter/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .babelrc  package-lock.json  package.json  urls.py  views.py  webpack.config.js
(+58 files in other folders)
